First running version.

--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
   -->
 
 <resources>
-    <string name="app_name">MaterialEditText</string>
+    <dimen name="screen_edge_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
