--- a/sample/src/main/res/values-sw600dp/dimens.xml
+++ b/sample/src/main/res/values-sw600dp/dimens.xml
@@ -6,5 +6,5 @@
   -->
 
 <resources>
-    <string name="app_name">MaterialEditText</string>
+    <dimen name="screen_edge_horizontal_margin">24dp</dimen>
 </resources>
