--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
             android:layout_marginRight="@dimen/edit_text_horizontal_margin">
-            <EditText
+            <me.zhanghai.android.materialedittext.MaterialEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/normal" />
@@ -113,7 +113,7 @@
             android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
             android:layout_marginRight="@dimen/edit_text_horizontal_margin"
             app:errorEnabled="true">
-            <EditText
+            <me.zhanghai.android.materialedittext.MaterialEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/error" />
@@ -124,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
             android:layout_marginRight="@dimen/edit_text_horizontal_margin">
-            <EditText
+            <me.zhanghai.android.materialedittext.MaterialEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:enabled="false"
