--- a/sample/src/main/res/layout/main_activity.xml
+++ b/sample/src/main/res/layout/main_activity.xml
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/native_edit_text"
+            android:text="@string/framework_edit_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
         <EditText
@@ -38,7 +38,7 @@
             android:hint="@string/normal" />
 
         <EditText
-            android:id="@+id/error_native_edit"
+            android:id="@+id/error_framework_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
